# mujoco-bazel

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl
src/: BUILD.bazel  main.cpp
test/: BUILD.bazel  main.cpp
